stepfinal/argocd/ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocd
#   namespace: argocd
#   annotations:
#     nginx.ingress.kubernetes.io/backend-protocol: https
# spec:
#   ingressClassName: argocd
#   rules:
#     - host: "argocd.bukhenko.watashinoheyadesu.pp.ua"
    
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: argocd-server
#                 port:
#                   name: https
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocd-server-grpc
#   namespace: argocd
#   annotations:
#     kubernetes.io/ingress.class: contour-internal
# spec:
#   ingressClassName: argocd
#   rules:
#   - host: argocd.bukhenko.watashinoheyadesu.pp.ua
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: argocd-server
#             port:
#               name: https


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    externaldns/hostname: "argocd.bukhenko.watashinoheyadesu.pp.ua"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.bukhenko.watashinoheyadesu.pp.ua  # Розмістіть 'host' всередині блоку 'rules'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
